# nierdzewny

./: Cargo.toml  README.md  config.desktop  manage.py  manage.sh
boot/boot/asm/x86_64/: end.asm  entry.asm
boot/boot/rust/: Cargo.toml  config.toml
boot/boot/rust/.cargo/: config.toml
boot/boot/rust/src/: boot_alloc.rs  lib.rs  main.rs  panic.rs  sec_sh.rs  sh.rs  vga.rs
boot/boot/rust/src/consts/: auto.rs  mod.rs
boot/boot/rust/src/device/: defaults.rs  device.rs  io.rs  keyboard.rs  mod.rs
boot/boot/rust/src/fs/: mod.rs
boot/boot/rust/src/keyb/: code.rs  map.rs  mod.rs
boot/boot/rust/src/mods/: acpi  core_lib  mod.rs  ps2  system_core  vga  vga_text
boot/boot/rust/src/mods/built/: mod.rs
boot/boot/rust/src/mods/built/acpi/: mod.rs
boot/boot/rust/src/mods/built/ps2/: keyboard.rs  mod.rs
boot/boot/rust/src/proc/: exception.rs  mod.rs
boot/boot/rust/src/proc/x86_64/: int.rs  low.rs  mod.rs
boot/boot/rust/src/sc/: mod.rs  text.rs  vga.rs
boot/boot/rust/src/util/: args.rs  buffer.rs  macros.rs  mod.rs  str.rs
boot/mods/acpi/: module.cfg
boot/mods/acpi/mod/: meta.cfg
boot/mods/acpi/src/: mod.rs
boot/mods/core_lib/: module.cfg
boot/mods/core_lib/src/: buffer.rs  mod.rs
boot/mods/ps2/: module.cfg
boot/mods/ps2/mod/: meta.cfg
boot/mods/ps2/src/: keyboard.rs  mod.rs
boot/mods/sample/mod/: meta.cfg
boot/mods/sample/src/: mod.rs
boot/mods/system_core/: module.cfg
boot/mods/vga/: module.cfg
boot/mods/vga_text/: module.cfg
comp/grub/: component.cfg
doc/: devices.txt  key codes.txt  keyboard.txt  terminal.txt
(+14 files in other folders)
