#!/bin/nano
[package]
name = "boot"
version = "0.1.0"
authors = ["TANDEX"]
edition = "2018"
description = "boot for nierdzewny operating system"

[lib]
crate-type = ["staticlib"]

[dependencies]
cpuio = "0.3.0"
x86_64 = "0.13.3"
pic8259_simple = "0.2.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
