#!/bin/nano
[package]
name = "boot"
version = "0.6.0"
authors = ["TANDEX"]
edition = "2018"
description = "rust (main) boot part for nierdzewny operating system"

[lib]
crate-type = ["staticlib"]

[dependencies]
cpuio = "0.3.0"
#x86_64 = "0.13.3"
pic8259_simple = "0.2.0"

[profile.dev]
opt-level = 2
debug = true
overflow-checks = false
lto = false
panic = "abort"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
lto = false
panic = "abort"
incremental = false
codegen-units = 8
