#!/bin/nano
[package]
name = "boot"
version = "0.7.0"
authors = ["TANDEX <tandex.tandex@proton.me>"]
edition = "2018"
description = "rust (main) boot part for nierdzewny operating system"

[lib]
crate-type = ["staticlib"]

[dependencies]
cpuio = "0.3.0"
#x86_64 = "0.13.3"
pic8259_simple = "0.2.0"

[profile.dev]
opt-level = 2
overflow-checks = false
panic = "abort"

[profile.release]
strip = "symbols"
opt-level = 3
overflow-checks = false
panic = "abort"
codegen-units = 8
